<package>
  <name>pal_ros_controllers</name>
  <version>0.0.0</version>
  <description>Library of PAL Robotics' ros controllers</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>

  <license>Propietary</license>

<!--   <url type="website">http://ros.org/wiki/pal_ros_controllers</url> -->
<!--   <url type="bugtracker">https://...pal_ros_controllers/issues</url> -->
<!--   <url type="repository">https://...pal_ros_controllers/</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>current_limit_controller</run_depend>
  <run_depend>rqt_current_limit_controller</run_depend>
  <run_depend>simple_grasping_action</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
